docs: record the Pix TLS/JDK/CloudHSM version requirements and how to verify them
README-CloudHSM.md gains two sections.

"Version requirements" quotes the Manual de Seguranca do Pix v3.7 on the wire
requirements (HTTP 1.1, TLS 1.2 or higher, mandatory mutual authentication,
minimum cipher suite 0xc02f, XMLDSig, ICP-Brasil chain v10 for the BC's
connection certificates, padrao SPB for participant signing certificates, and
the requirement to respect DNS TTL), then separates three things that are
routinely conflated:

  - what BCB requires;
  - which JDKs satisfy it - both Corretto 11.0.32 and 17.0.20 support AND enable
    0xc02f by default, measured, and the suite has been available since 8u161
    with TLS 1.3 since JDK 11 - so TLS does NOT constrain the JDK choice;
  - what actually forces a JDK upgrade, which is CloudHSM: this code targets
    Client SDK 3, hsm1.medium has been uncreatable since 04/2025 and out of
    support since 2026-03-31, the only creatable type hsm2m.medium needs SDK
    5.9.0+, and the SDK 5 JCE provider supports OpenJDK 17/21/25 only.

It also states plainly that the CloudHSM path cannot be deployed as written, and
records how the security manual was obtained, since the URL BCB's own API page
links to returns 404 while its sibling manuals return 200.

"How to verify all of this" gives the six commands that actually run, a table
mapping each claim to the test or check that covers it, and how to reproduce the
negative controls. It warns that only core and test execute tests - simulator and
cloudhsm run with -DskipTests, so a test added there would silently never run -
and that a new test must be confirmed by reading the run's test COUNT.

It also records a methodological trap hit twice while doing this work: do not use
`git checkout --` to undo a deliberate mutation. For an untracked file it
silently does nothing, and for a tracked file it reverts to the last COMMIT
rather than to uncommitted work. Both produced misleading all-green runs. R